--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,15 +10,15 @@ server.port: 9090
 #domain.datasource.password=store
 #domain.datasource.generate-dll=false
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/HQ_BLOG
-#domain.datasource.driver-class=com.mysql.jdbc.Driver;
-#spring.datasource.username=root
-#spring.datasource.password=1234
-#spring.jpa.generate-ddl=true
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url=jdbc:mysql://localhost:3306/hq_blog
+domain.datasource.driver-class=com.mysql.jdbc.Driver;
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto = update
 
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://192.168.1.73:1433;databaseName=BSB
-spring.datasource.username=sa
-spring.datasource.password=Newwave@123
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://192.168.1.73:1433;databaseName=BSB;encrypt=false;trustServerCertificate=true
+#spring.datasource.username=sa
+#spring.datasource.password=Newwave@123
