--- a/src/main/my-blog/package.json
+++ b/src/main/my-blog/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.2",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14",
+    "jquery": "^3.6.1",
+    "popper.js": "^1.16.1",
+    "vue": "^2.7.12",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
