--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,8 @@
 server.port: 9090
 
-#spring.profiles.active=@profilename@
+spring.main.allow-circular-references: true
 
-#MySQL local database
-#domain.datasource.type=MYSQL
-#domain.datasource.url=jdbc:mysql://localhost:3600/store;
-#domain.datasource.driver-class=com.mysql.jdbc.Driver;
-#domain.datasource.username=store
-#domain.datasource.password=store
-#domain.datasource.generate-dll=false
-
+# My sql
 spring.datasource.url=jdbc:mysql://localhost:3306/hq_blog
 domain.datasource.driver-class=com.mysql.jdbc.Driver;
 spring.datasource.username=root
@@ -18,7 +11,6 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = update
 
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://192.168.1.73:1433;databaseName=BSB;encrypt=false;trustServerCertificate=true
-#spring.datasource.username=sa
-#spring.datasource.password=Newwave@123
+blog.jwt.secret: MynameisHunglk
+
+blog.homepage: http://localhost:9090/
