--- a/src/main/my-blog/package.json
+++ b/src/main/my-blog/package.json
@@ -5,21 +5,30 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-dev": "vue-cli-service build --mode=development"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "jquery": "^3.6.1",
+    "jwt-decode": "2.2.0",
     "popper.js": "^1.16.1",
     "vue": "^2.7.12",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
-    "vuesax": "^4.0.1-alpha.25"
+    "vue-axios": "2.1.4",
+    "vuesax": "^4.0.1-alpha.25",
+    "vuetify": "^2.6.11",
+    "vuex": "3.1.0",
+    "vuex-localstorage": "1.0.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "5.8.1",
+    "@types/jwt-decode": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
