--- a/src/main/my-blog/package.json
+++ b/src/main/my-blog/package.json
@@ -21,7 +21,7 @@
     "vue-axios": "2.1.4",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
-    "vue-router": "^3.5.1",
+    "vue-router": "3.0.6",
     "vuesax": "^4.0.1-alpha.25",
     "vuetify": "^2.6.11",
     "vuex": "3.1.0",
