--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation group: 'org.eclipse.persistence', name: 'org.eclipse.persistence.jpa', version: '2.7.7'
 	implementation 'io.jsonwebtoken:jjwt:0.2'
+	implementation 'org.apache.commons:commons-lang3:3.0'
 	
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	compileOnly 'org.projectlombok:lombok'
