--- a/src/main/my-blog/package.json
+++ b/src/main/my-blog/package.json
@@ -22,6 +22,7 @@
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "3.0.6",
+    "vue-toasted": "1.1.26",
     "vuesax": "^4.0.1-alpha.25",
     "vuetify": "^2.6.11",
     "vuex": "3.1.0",
