--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port: 9091
 spring.main.allow-circular-references: true
 
 # My sql
-spring.datasource.url=jdbc:mysql://localhost:3306/hq_blog
+spring.datasource.url=jdbc:mysql://localhost:3306/hq_blog?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 domain.datasource.driver-class=com.mysql.jdbc.Driver;
 spring.datasource.username=root
 spring.datasource.password=1234
