--- a/src/main/my-blog/package.json
+++ b/src/main/my-blog/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.6.1",
     "jwt-decode": "2.2.0",
     "popper.js": "^1.16.1",
+    "nprogress": "0.2.0",
     "vue": "^2.7.12",
     "vue-axios": "2.1.4",
     "vue-class-component": "^7.2.3",
