--- a/src/main/my-blog/package.json
+++ b/src/main/my-blog/package.json
@@ -16,12 +16,13 @@
     "core-js": "^3.8.3",
     "jquery": "^3.6.1",
     "jwt-decode": "2.2.0",
-    "popper.js": "^1.16.1",
     "nprogress": "0.2.0",
+    "popper.js": "^1.16.1",
     "vue": "^2.7.12",
     "vue-axios": "2.1.4",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "3.0.6",
     "vue-toasted": "1.1.26",
     "vuesax": "^4.0.1-alpha.25",
