--- a/src/main/my-blog/package.json
+++ b/src/main/my-blog/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^2.0.8",
+    "@popperjs/core": "^2.11.6",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "bootstrap-vue": "^2.22.0",
